Move the ironic custom template into a jinja template
Ironic now requires a custom template that varies depending on
version. Add support of templates in custom_templates and move
the ironic custom_templates into a template.

--- a/plugins/tripleo-overcloud/tasks/environment_templates.yml
+++ b/plugins/tripleo-overcloud/tasks/environment_templates.yml
@@ -3,6 +3,10 @@
       file: "{{ templates_list_file}}"
       name: current_file
 
+- stat:
+      path: "{{ templates_list_file }}.template"
+  register: templates_list_file_override
+
 - name: find the template file or corresponding j2 template
   find:
       path: "{{ item| dirname }}"
@@ -36,3 +40,9 @@
   when: current_file.custom_templates is defined
   vars:
       raw_name: "{{ templates_list_file | basename | splitext | first }}"
+
+- name: create custom templates file2
+  template:
+      dest: "{{ ansible_user_dir }}/{{ install.deployment.files | basename }}/{{ raw_name }}.yaml"
+      src: "{{ templates_list_file }}.template"
+  when: templates_list_file_override.stat.exists
